<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/history_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_num"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/history_order_indexTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_weight="9"/>
            <ImageButton
                android:id="@+id/into_info_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/into_icon_gray"
                android:background="#00000000"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CDCDCD"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_menu"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#303030"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/history_menu_nameTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="ICED 아메리카노 외 5건"
                android:textSize="12sp"
                android:textColor="#494949"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pay_kind"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#303030"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/history_pay_kindTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="이디야 페이"
                android:textSize="12sp"
                android:textColor="#494949"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pay_cost"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#303030"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/history_pay_costTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="28,500원"
                android:textSize="12sp"
                android:textColor="#494949"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_state"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="#303030"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/history_order_stateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="테이크 아웃"
                android:textSize="12sp"
                android:textColor="#494949"
                android:layout_weight="4"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>